// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzer extractToManifest should extract manifest 1`] = `
[
  [],
  {
    "documents": [
      {
        "body": "query MyQuery {
  hello
}",
        "documentEnd": {
          "character": 41,
          "line": 0,
        },
        "documentStart": {
          "character": 18,
          "line": 0,
        },
        "fileName": "main.ts",
        "fragmentName": undefined,
        "operationName": "MyQuery",
        "tag": "gql",
        "templateLiteralNodeEnd": {
          "character": 42,
          "line": 0,
        },
        "templateLiteralNodeStart": {
          "character": 17,
          "line": 0,
        },
        "type": "query",
      },
    ],
  },
]
`;

exports[`Analyzer report should create markdown report 1`] = `
"# Extracted GraphQL Operations
## Queries

### MyQuery

\`\`\`graphql
query MyQuery {
  hello
}
\`\`\`

From [main.ts:1:19](main.ts#L1-L1)
    
---
Extracted by [ts-graphql-plugin](https://github.com/Quramy/ts-graphql-plugin)"
`;

exports[`Analyzer report should create markdown report from manifest 1`] = `
"# Extracted GraphQL Operations
## Queries

### MyQuery

\`\`\`graphql
query MyQuery {
  hello
}
\`\`\`

From [main.ts:1:19](main.ts#L1-L1)
    
---
Extracted by [ts-graphql-plugin](https://github.com/Quramy/ts-graphql-plugin)"
`;

exports[`Analyzer report should create markdown report with external fragments 1`] = `
"# Extracted GraphQL Operations
## Queries

### MyQuery

\`\`\`graphql
query MyQuery {
  ...MyFragment
}
\`\`\`

From [main.ts:1:19](main.ts#L1-L1)
    
---
Extracted by [ts-graphql-plugin](https://github.com/Quramy/ts-graphql-plugin)"
`;

exports[`Analyzer typegen should create type files 1`] = `
"/* eslint-disable */
/* This is an autogenerated file. Do not edit this file directly! */
export type MyFragment = {
    hello: string;
};
"
`;

exports[`Analyzer typegen should create type files 2`] = `
"/* eslint-disable */
/* This is an autogenerated file. Do not edit this file directly! */
export type MyQuery = MyFragment;
export type MyQueryVariables = {};
export type MyFragment = {
    hello: string;
};
"
`;

exports[`Analyzer typegen should report error when no schema 1`] = `"No GraphQL schema. Confirm your ts-graphql-plugin's "schema" configuration at tsconfig.json's compilerOptions.plugins section."`;

exports[`Analyzer validate should report error when no schema 1`] = `"No GraphQL schema. Confirm your ts-graphql-plugin's "schema" configuration at tsconfig.json's compilerOptions.plugins section."`;

exports[`Analyzer validate should validate project with schema error project 1`] = `"Syntax Error: Unexpected Name "hogehoge"."`;

exports[`Analyzer validate should validate project with semantic warning project 1`] = `"Unknown fragment "F2"."`;
